--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Hi, I'm Moshood
+subtitle: I'm a Software Engineer, my code is my tool. I simplify and design client's specifications into scalable applications.
 ---
 
